--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,3 +21,4 @@ add_subdirectory(${googletest_SOURCE_DIR} ${googletest_BINARY_DIR})
 add_subdirectory(sem1)
 add_subdirectory(task1)
 add_subdirectory(Point)
+add_subdirectory(PointArray)
