add sem2 arrays and pointers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 add_subdirectory(${googletest_SOURCE_DIR} ${googletest_BINARY_DIR})
 
 add_subdirectory(sem1)
+add_subdirectory(sem2)
 add_subdirectory(task1)
 add_subdirectory(Point)
 add_subdirectory(PointArray)
