add sem2 classes and rule of five

--- a/sem2/CMakeLists.txt
+++ b/sem2/CMakeLists.txt
@@ -2,4 +2,9 @@ project(sem1)
 
 single_executable(src/pointers.cpp)
 single_executable(src/arrays.cpp)
+single_executable(src/classes.cpp)
 single_executable(src/inheritance.cpp)
+single_executable(src/operators.cpp)
+single_executable(src/struct.cpp)
+single_executable(src/enum.cpp)
+single_executable(src/rule_of_five.cpp)
