--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,3 +23,4 @@ add_subdirectory(sem2)
 add_subdirectory(task1)
 add_subdirectory(Point)
 add_subdirectory(PointArray)
+add_subdirectory(CyclicQueue)
