--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,3 +26,4 @@ add_subdirectory(task1)
 add_subdirectory(Point)
 add_subdirectory(PointArray)
 add_subdirectory(CyclicQueue)
+add_subdirectory(BinaryTree)
