--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ add_subdirectory(sem1)
 add_subdirectory(sem2)
 add_subdirectory(sem3)
 add_subdirectory(sem4)
+add_subdirectory(sem5)
 add_subdirectory(task1)
 add_subdirectory(task2)
 add_subdirectory(Point)
