add sem6 stl containers file templates

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ add_subdirectory(sem2)
 add_subdirectory(sem3)
 add_subdirectory(sem4)
 add_subdirectory(sem5)
+add_subdirectory(sem6)
 add_subdirectory(task1)
 add_subdirectory(task2)
 add_subdirectory(Point)
