add Timer helper class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,3 +30,4 @@ add_subdirectory(Point)
 add_subdirectory(PointArray)
 add_subdirectory(CyclicQueue)
 add_subdirectory(BinaryTree)
+add_subdirectory(Timer)
