--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ add_subdirectory(sem6)
 add_subdirectory(task1)
 add_subdirectory(task2)
 add_subdirectory(task3)
+add_subdirectory(task4)
 add_subdirectory(Point)
 add_subdirectory(PointArray)
 add_subdirectory(CyclicQueue)
