--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,7 @@ add_subdirectory(sem3)
 add_subdirectory(sem4)
 add_subdirectory(sem5)
 add_subdirectory(sem6)
+add_subdirectory(sem8)
 add_subdirectory(task1)
 add_subdirectory(task2)
 add_subdirectory(task3)
